--- a/sopplus/src/main/res/layout-land/activity_main.xml
+++ b/sopplus/src/main/res/layout-land/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,9 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
 
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="24dp"
         android:background="#03A9F4"
         android:gravity="right"
 
@@ -38,8 +39,10 @@
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
         android:background="@android:color/darker_gray"
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
@@ -47,16 +50,16 @@
         android:textAlignment="center"
         android:textAppearance="?android:textAppearanceLarge"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exoplayer_view" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         android:id="@+id/list_view"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#03A9F4"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/text"
+        app:layout_constraintStart_toStartOf="@+id/text"
+        app:layout_constraintTop_toBottomOf="@+id/text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
